fixed index.html file

--- a/galeria.html
+++ b/galeria.html
@@ -24,7 +24,7 @@
 			<div class="logo"><a href="#"> </a> <img src="imgs/LOGO-ARBOL-sideways.png" alt="" height=15% width=15% > </div>
 			<nav class="main_nav">
 				<ul class="d-flex flex-row align-items-start justify-content-start">
-					<li><a href="index.html">Inicio</a></li>
+					<li><a href="home.html">Inicio</a></li>
 					<li><a href="radio.html">RADIO EN VIVO</a></li>
 					<!-- <li><a href="nosotros.html">Nosotros</a></li> -->
 					<li><a href="ensayos.html">Ensaya acá</a></li>
@@ -51,7 +51,7 @@
 				
 				<nav class="menu_nav">
 					<ul class="d-flex flex-column align-items-start justify-content-start">
-						<li><a href="index.html">Inicio</a></li>
+						<li><a href="home.html">Inicio</a></li>
 						<li><a href="radio.html">RADIO EN VIVO</a></li>
 						<!-- <li><a href="nosotros.html">Nosotros</a></li> -->
 						<li><a href="ensayos.html">Ensaya acá</a></li>
@@ -262,7 +262,7 @@
 				<div class="footer_list">
 					<div class="footer_list_title">Más Links</div>
 					<ul>
-						<li><a href="index.html">Inicio</a></li>
+						<li><a href="home.html">Inicio</a></li>
 						<li><a href="radio.html">RADIO EN VIVO</a></li>
 						<!-- <li><a href="nosotros.html">Nosotros</a></li> -->
 						<li><a href="ensayos.html">Ensaya acá</a></li>
