--- a/ensayos.html
+++ b/ensayos.html
@@ -25,7 +25,7 @@
 			
 			<nav class="main_nav">
 				<ul class="d-flex flex-row align-items-start justify-content-start">
-					<li ><a href="index.html">Inicio</a></li>
+					<li ><a href="home.html">Inicio</a></li>
 					<li><a href="radio.html">RADIO EN VIVO</a></li>
 					<!-- <li><a href="nosotros.html">Nosotros</a></li> -->
 					<li class="active"><a href="ensayos.html">Ensaya acá</a></li>
@@ -52,7 +52,7 @@
 				
 				<nav class="menu_nav">
 					<ul class="d-flex flex-column align-items-start justify-content-start">
-						<li><a href="index.html">Inicio</a></li>
+						<li><a href="home.html">Inicio</a></li>
 						<li><a href="radio.html">RADIO EN VIVO</a></li>
 						<!-- <li><a href="nosotros.html">Nosotros</a></li> -->
 						<li><a href="ensayos.html">Ensaya acá</a></li>
@@ -148,7 +148,7 @@
 				<div class="footer_list">
 					<div class="footer_list_title">Más Links</div>
 					<ul>
-						<li><a href="index.html">Inicio</a></li>
+						<li><a href="home.html">Inicio</a></li>
 						<li><a href="radio.html">RADIO EN VIVO</a></li>
 						<!-- <li><a href="nosotros.html">Nosotros</a></li> -->
 						<li><a href="ensayos.html">Ensaya acá</a></li>
