--- a/home.html
+++ b/home.html
@@ -34,7 +34,7 @@
 			</div> -->
 			<nav class="main_nav">
 				<ul class="d-flex flex-row align-items-start justify-content-start" >
-					<li class="active"><a href="index.html">Inicio</a></li>
+					<li class="active"><a href="home.html">Inicio</a></li>
 					<li><a href="radio.html">RADIO EN VIVO</a></li>
 					<!-- <li><a href="nosotros.html">Nosotros</a></li> -->
 					<li><a href="ensayos.html">Ensaya acá</a></li>
@@ -62,7 +62,7 @@
 				
 				<nav class="menu_nav">
 					<ul class="d-flex flex-column align-items-start justify-content-start">
-						<li><a href="index.html">Inicio</a></li>
+						<li><a href="home.html">Inicio</a></li>
 						<li><a href="radio.html">RADIO EN VIVO</a></li>
 						<!-- <li><a href="nosotros.html">Nosotros</a></li> -->
 						<li><a href="ensayos.html">Ensaya acá</a></li>
@@ -211,7 +211,7 @@
 				<div class="footer_list">
 					<div class="footer_list_title">Más Links</div>
 					<ul>
-						<li><a href="index.html">Inicio</a></li>
+						<li><a href="home.html">Inicio</a></li>
 						<li><a href="radio.html">RADIO EN VIVO</a></li>
 						<!-- <li><a href="nosotros.html">Nosotros</a></li> -->
 						<li><a href="ensayos.html">Ensaya acá</a></li>
