--- a/home.html
+++ b/home.html
@@ -151,7 +151,7 @@
 					<div class="artist_content">
 						<div class="section_title_container">
 							<div class="section_subtitle">Entrevistados en <a href="https://brownonline.com.ar/45794-espectaculos-adrogue-la-historica-sala-ensayos-arbol-caido-cumple-20-anos-2018-08/">Brown OnLine</a></div>
-							<div class="section_title"><h1>Conocé la historia del Árbol, los Villasante y los Esayos Abiertos</h1></div>
+							<div class="section_title"><h1>Conocé la historia del Árbol, los Villasante y los Ensayos Abiertos</h1></div>
 						</div>
 						<div class="artist_text">
 							<p> Donde la música se comparte! Primera sala de Adrogué y la que mejor suena! Sonído profesional y ambiente familiar. 20 años compartiendo la mejor música del conurbano sur.</p>
